modify mi website

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <title>Valerio Di Zio - CV</title>
 </head>
 <body>
-<p>Hi, My CV coming soon...</p>
+<p>Hi, My CV Personal coming soon...</p>
 </body>
 </html>
