chore: update message

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <title>Valerio Di Zio - CV</title>
 </head>
 <body>
-<p>Hi, My CV Personal coming soon...</p>
+<p>Hello, my CV online is coming...</p>
 </body>
 </html>
